--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="manifest" href="manifest.json" />
     
-    <!-- Tailwind CSS -->
+    <!-- Tailwind CSS (CDN for simplicity, but consider installing for full prod opt) -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Doraemon Font Style (Rounded) -->
@@ -33,17 +33,20 @@
           scrollbar-width: none;  /* Firefox */
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
